# gdx-pandas

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGES.txt  CLAUDE.md  LICENSE  README.md  README.txt  index.html  pyproject.toml  versions.json
.github/workflows/: docs-pr.yml  docs.yml  lint.yml  release-docs.yml  release-pypi.yml
dev/: README.md  ROADMAP.md  RUNTIME_GAMS_SWAP.md  TODO-verify-docs-ci.md  build_alias_fixture.py  build_set_text_fixture.py  build_strict_domain_fixture.py  build_symbol_types_fixture.py  build_universe_alias_fixture.py  build_verify_install_sample.py  check_resolve_engine_cross_gams.py  md_to_rst.py  modernization-wrapup.md  profile_gdxcc_write.py  profile_raw_gdxcc.py  run_test_matrix.sh
doc/source/: conf.py  index.md  index.rst  overview.md
doc/source/_templates/: layout.html
doc/source/api/: gdxpds.rst
gdxpds/: __init__.py  _version.py  gdx.py  read_gdx.py  special.py  tools.py
gdxpds/test/: test_conversions.py  test_specials.py
latest/: .buildinfo  api.html  genindex.html  index.html  objects.inv  overview.html  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: api.doctree  environment.pickle  index.doctree  overview.doctree
latest/.doctrees/_autosummary/: gdxpds.cli.csv_to_gdx.doctree  gdxpds.cli.doctree  gdxpds.cli.gdx_to_csv.doctree  gdxpds.doctree  gdxpds.gdx.doctree  gdxpds.read_gdx.doctree  gdxpds.tools.doctree  gdxpds.write_gdx.doctree
latest/_autosummary/: gdxpds.cli.csv_to_gdx.html  gdxpds.cli.gdx_to_csv.html  gdxpds.cli.html  gdxpds.cli.main.html  gdxpds.gdx.html  gdxpds.html  gdxpds.read_gdx.html  gdxpds.special.html  gdxpds.tools.html  gdxpds.write_gdx.html
latest/_modules/: index.html
latest/_modules/gdxpds/: gdx.html  read_gdx.html  special.html  tools.html  write_gdx.html
latest/_sources/: overview.md.txt
latest/_sources/_autosummary/: gdxpds.write_gdx.rst.txt
latest/_static/: style.css  versions.js
src/gdxpds/: __init__.py  _backend.py  _engine.py  _gdxcc_backend.py  _gdxcc_engine.py  _transfer_backend.py  _transfer_engine.py  gdx.py  read_gdx.py  special.py  tools.py  write_gdx.py
src/gdxpds/_verify_install/: sample.gdx
src/gdxpds/cli/: csv_to_gdx.py  gdx_to_csv.py  main.py
tests/: conftest.py  set_text_fixture.gdx  strict_domain_fixture.gdx  symbol_types_fixture.gdx  test_alias.py  test_backend_parity.py  test_backend_selection.py  test_backend_timing.py  test_conversions.py  test_diagnostics.py  test_domain.py  test_engine_parity.py  test_engine_selection.py  test_engine_timing.py  test_handle_lifecycle.py  test_imports.py  test_read.py  test_set_ordering.py  test_specials.py  test_write.py
tests/data/: alias_fixture.gdx  symbol_types_fixture.gdx  universe_alias_fixture.gdx
v1.5.0/: .buildinfo  api.html  index.html  search.html  searchindex.js
v1.5.0/.doctrees/: api.doctree  environment.pickle  index.doctree
v1.5.0/.doctrees/_autosummary/: gdxpds.gdx.doctree  gdxpds.read_gdx.doctree  gdxpds.special.doctree  gdxpds.write_gdx.doctree
v1.5.0/_autosummary/: gdxpds.cli.csv_to_gdx.html  gdxpds.cli.gdx_to_csv.html  gdxpds.gdx.html  gdxpds.read_gdx.html  gdxpds.special.html
v1.5.0/_modules/gdxpds/: write_gdx.html
v1.5.0/_sources/_autosummary/: gdxpds.cli.main.rst.txt  gdxpds.read_gdx.rst.txt
v1.6.0/: .buildinfo  api.html  genindex.html  index.html  objects.inv  overview.html  searchindex.js
v1.6.0/.doctrees/: api.doctree  environment.pickle  index.doctree
v1.6.0/.doctrees/_autosummary/: gdxpds.cli.csv_to_gdx.doctree
v1.6.0/_autosummary/: gdxpds.cli.gdx_to_csv.html  gdxpds.cli.html  gdxpds.gdx.html  gdxpds.read_gdx.html  gdxpds.special.html
v1.6.0/_modules/gdxpds/: read_gdx.html  tools.html
v1.6.0/_sources/: api.md.txt  overview.md.txt
v1.6.0/_sources/_autosummary/: gdxpds.special.rst.txt
v2.0.0/: .buildinfo  api.html  py-modindex.html  searchindex.js
v2.0.0/.doctrees/: api.doctree  environment.pickle
v2.0.0/_autosummary/: gdxpds.cli.csv_to_gdx.html  gdxpds.cli.gdx_to_csv.html  gdxpds.cli.html  gdxpds.gdx.html  gdxpds.html  gdxpds.read_gdx.html  gdxpds.special.html  gdxpds.tools.html
v2.0.0/_modules/: index.html
v2.0.0/_sources/: index.md.txt  overview.md.txt
v2.1.0/: .buildinfo  py-modindex.html  searchindex.js
v2.1.0/.doctrees/: api.doctree  environment.pickle  index.doctree
v2.1.0/_autosummary/: gdxpds.cli.gdx_to_csv.html  gdxpds.cli.main.html  gdxpds.gdx.html  gdxpds.html  gdxpds.read_gdx.html  gdxpds.special.html
v2.1.0/_modules/: index.html
v2.1.0/_sources/: overview.md.txt
v3.0.0/: .buildinfo  objects.inv
v3.0.0/.doctrees/: api.doctree  environment.pickle  overview.doctree
v3.0.0/_autosummary/: gdxpds.cli.csv_to_gdx.html  gdxpds.cli.html  gdxpds.gdx.html  gdxpds.html  gdxpds.read_gdx.html  gdxpds.write_gdx.html
v3.0.0/_modules/: index.html
v3.1.0/: api.html  genindex.html  index.html  py-modindex.html  searchindex.js
v3.1.0/.doctrees/: api.doctree  environment.pickle
v3.1.0/_autosummary/: gdxpds.cli.gdx_to_csv.html  gdxpds.cli.main.html  gdxpds.html
v3.1.0/_modules/: index.html
v4.0.0/: .buildinfo  api.html  py-modindex.html  search.html
v4.0.0/.doctrees/: api.doctree  environment.pickle  overview.doctree
v4.0.0/_autosummary/: gdxpds.gdx.html  gdxpds.html  gdxpds.tools.html
(+51 files in other folders)
